@@ -31,14 +31,16 @@
         <app.name>circuitBreak</app.name>
         <!-- TEST PROPERTIES -->
         <skipTests>false</skipTests>
-        <surefire.version>2.17</surefire.version>
-        <surefire.argline>-Xmx512m -XX:MaxPermSize=128m</surefire.argline>
+        <surefire.version>2.19.1</surefire.version>
+        <surefire.argline>-Xmx512m</surefire.argline>
         <jacoco.argline>
             -javaagent:${settings.localRepository}${file.separator}org${file.separator}jacoco${file.separator}org.jacoco.agent${file.separator}${jacoco.version}${file.separator}org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}${file.separator}coverage-reports${file.separator}jacoco-ut.exec
         </jacoco.argline>
         <skipIntegrationTests>false</skipIntegrationTests>
-        <junit.version>4.11</junit.version>
-        <mockito.version>1.9.5</mockito.version>
+        <junit.jupiter.version>5.1.0</junit.jupiter.version>
+        <junit.platform.version>1.1.0</junit.platform.version>
+        <junit.vintage.version>5.1.0</junit.vintage.version>
+        <mockito.version>2.21.0</mockito.version>
     </properties>
 
 
@@ -249,9 +251,9 @@
         <!-- Test dependencies -->
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -274,6 +276,12 @@
             <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
             <version>${jersey.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -281,6 +289,12 @@
             <artifactId>wiremock</artifactId>
             <version>2.18.0</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -365,6 +379,16 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
@@ -383,11 +407,23 @@
                         <exclude>**/integrationTest/**/*.java</exclude>
                     </excludes>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit.platform.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit.jupiter.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.16</version>
+                <version>${surefire.version}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <app.log.path>${tmp.dir}</app.log.path>
@@ -403,6 +439,18 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit.platform.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit.jupiter.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -581,14 +629,16 @@
                             <arguments>
                                 <argument>java</argument>
                                 <argument>-Xmx512M</argument>
+                                <argument>-Xms512M</argument>
+                                <argument>-XX:MetaspaceSize=128M</argument>
+                                <argument>-XX:MaxMetaspaceSize=128M</argument>
+                                <argument>-Xss512K</argument>
                                 <argument>--add-modules=java.xml.bind,java.activation</argument>
                                 <argument>--illegal-access=warn</argument>
                                 <argument>-Dspring.profiles.active=test</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8001</argument>
                                 <argument>-Dorg.jboss.logging.provider=slf4j</argument>
-                                <argument>
-                                    -Dlog4j.configurationFile=file://${app.config.dir}${file.separator}log4j2.xml
-                                </argument>
+                                <argument>-Dlog4j.configurationFile=file://${app.config.dir}${file.separator}log4j2.xml</argument>
                                 <argument>-Dapp.log.path=${tmp.dir}</argument>
                                 <argument>-Dapp.log.name=${app.name}</argument>
                                 <argument>-cp</argument>
